; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/iwi/extr_if_iwi.c_iwi_toggle_event.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/iwi/extr_if_iwi.c_iwi_toggle_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IWI_RST_STANDBY = common dso_local global i32 0, align 4
@IWI_RST_GATE_ODMA = common dso_local global i32 0, align 4
@IWI_RST_GATE_IDMA = common dso_local global i32 0, align 4
@IWI_RST_GATE_ADMA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @iwi_toggle_event to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @iwi_toggle_event(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = load i32, i32* @IWI_RST_STANDBY, align 4
  %5 = load i32, i32* @IWI_RST_GATE_ODMA, align 4
  %6 = or i32 %4, %5
  %7 = load i32, i32* @IWI_RST_GATE_IDMA, align 4
  %8 = or i32 %6, %7
  %9 = load i32, i32* @IWI_RST_GATE_ADMA, align 4
  %10 = or i32 %8, %9
  %11 = xor i32 %10, -1
  %12 = and i32 %3, %11
  ret i32 %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
